added sections and links in index

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,23 @@
 </head>
 
 <body>
+
+
+  <section class="about-Us container"></section>
+
+  <section class="game-View container"></section>
+
+  <section class="login-View container"></section>
   
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <!-- link js files -->
+  <script src="/public/scripts/model/game.js"></script>
+  <script src="/public/scripts/views/aboutView.js"></script>
+  <script src="/public/scripts/views/gameView.js"></script>
+  <script src="/public/scripts/views/loginView.js"></script>
 
 </body>
 
