added Open Graph Meta Tags

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,30 @@
   <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/modules/.css">
 
-  <title>Document</title>
+  <title>Fun with Gifs!</title>
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Gif Magic Eight Ball" />
+    <meta property="og:type" content="website" />
+    <meta name="description" content="A fun and user-friendly game for all ages!!" />
+    <meta property=”og:description” content="A fun and user-friendly game for all ages!!" />
+    <!-- add preview image link eventually in content -->
+    <meta property="og:image" content="" />
+    <meta property="og:locale" content="en_US" />
+    <!-- add url link. Will be to our Heroku deployment -->
+    <meta property="og:url" content="https://green-tea2000.github.io/whack-a-mole/index.html" />
 </head>
 
 <body>
+
+  <nav id="menu">
+    <ul>
+      <li>Home</li>
+      <li>History</li>
+      <li>About the Creators</li>
+    </ul>
+  </nav>
+
+  <h1>Welcome!</h1>
 
 
   <section class="about-Us container"></section>
