more index setup

--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,17 @@
 
   <h1>Welcome!</h1>
 
+  <section class="about-Us container">
+  <h3>Beverly</h3>
+  <p>Why she's awesome</p>
+  <h3>Patricia</h3>
+  <p>Why I'm awesome</p>
+  <h3>Tyler</h3>
+  <p>Why he's awesome</p>
+  <h3>Haron</h3>
+  <p>Why he's also awesome</p>
 
-  <section class="about-Us container"></section>
+  </section>
 
   <section class="game-View container"></section>
 
