--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
   <h1>Welcome!</h1>
 
   <section class="about-Us container">
+  <h2>About the Creators:</h2>
+
   <h3>Beverly</h3>
   <p>Why she's awesome</p>
   <h3>Patricia</h3>
