added form for username

--- a/public/index.html
+++ b/public/index.html
@@ -46,12 +46,17 @@
   <p>Why he's awesome</p>
   <h3>Haron</h3>
   <p>Why he's also awesome</p>
-
   </section>
 
   <section class="game-View container"></section>
 
-  <section class="login-View container"></section>
+  <section class="login-View container">
+    <form action="" id="login-form">
+      <label>Enter a Username:
+          <input type="text" id="userName" placeholder="Username">
+      </label>
+    </form>
+  </section>
   
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
