added error view in html, add screen responsiveness in layout.css

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
 
   <h1>Welcome!</h1>
 
+  <section class="error-View container"></section>
+
   <section class="about-Us container">
   <h2>About the Creators:</h2>
 
@@ -49,6 +51,8 @@
   </section>
 
   <section class="game-View container"></section>
+
+  <section class="history-View container"></section>
 
   <section class="login-View container">
     <form action="" id="login-form">
