added question form and button to game-View

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,14 @@
   <p>Why he's also awesome</p>
   </section>
 
-  <section class="game-View container"></section>
+  <section class="game-View container">
+      <form action="" id="question-form">
+          <label>Enter a Question to the Magic Gif Ball!
+              <input type="text" id="questionToGifBall" placeholder="Is this a good question?">
+          </label>
+          <button type="submit">Ask!</button>
+        </form>
+  </section>
 
   <section class="history-View container"></section>
 
@@ -59,6 +66,7 @@
       <label>Enter a Username:
           <input type="text" id="userName" placeholder="Username">
       </label>
+      <button type="submit">Submit</button>
     </form>
   </section>
   
