typo fixes in html

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,13 @@
     <meta property="og:type" content="website" />
     <meta name="description" content="A fun and user-friendly game for all ages!!" />
     <meta property=”og:description” content="A fun and user-friendly game for all ages!!" />
+    <!-- DO: -->
     <!-- add preview image link eventually in content -->
     <meta property="og:image" content="" />
     <meta property="og:locale" content="en_US" />
-    <!-- add url link. Will be to our Heroku deployment -->
-    <meta property="og:url" content="https://green-tea2000.github.io/whack-a-mole/index.html" />
+    <!-- DO: -->
+    <!-- add url link in content. Will be to our Heroku deployment -->
+    <meta property="og:url" content="" />
 </head>
 
 <body>
@@ -70,15 +72,16 @@
     </form>
   </section>
   
-
+  <!-- jQuery, Handlebars, and page.js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <!-- link js files -->
   <script src="/public/scripts/model/game.js"></script>
-  <script src="/public/scripts/views/aboutView.js"></script>
-  <script src="/public/scripts/views/gameView.js"></script>
-  <script src="/public/scripts/views/loginView.js"></script>
+  <script src="/public/scripts/view/aboutView.js"></script>
+  <script src="/public/scripts/view/gameView.js"></script>
+  <script src="/public/scripts/view/historyView.js"></script>
+  <script src="/public/scripts/view/loginView.js"></script>
 
 </body>
 
