get admin and home routes working

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
 
   <nav id="menu">
     <ul>
-      <li>Home</li>
+      <li><a href="/">Home</a></li>
       <li>History</li>
-      <li>About the Creators</li>
+      <li><a href="/about">About the Creators</a></li>
     </ul>
   </nav>
 
@@ -83,6 +83,6 @@
   <script src="scripts/view/gameView.js"></script>
   <script src="scripts/view/historyView.js"></script>
   <script src="scripts/view/loginView.js"></script>
-  <script>app.gameView.initGamePage();</script>
+  <script src="scripts/controller/routes.js"></script>
 </body>
 </html>
