--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
 
   <nav id="menu">
     <ul>
-      <li>Home</li>
-      <li>History</li>
-      <li>About the Creators</li>
+      <li><a href="/"><div class="nav-menu" id="home-button">Home</div></a></li>
+      <li><a href=""><div class="nav-menu" id="gif-history-button">History</div></a></li>
+      <li><a href=""><div class="nav-menu" id="about-button">About the Creators</div></a></li>
     </ul>
-  </nav>
+  </nav><br>
 
   <h1>Welcome!</h1>
 
@@ -62,7 +62,9 @@
         </form>
   </section>
 
-  <section class="history-View container"></section>
+  <section class="history-View container">
+
+  </section>
 
   <section class="login-View container">
     <form action="" id="login-form">
