--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- add url link in content. Will be to our Heroku deployment -->
     <meta property="og:url" content="" />
 
-    <!-- Handlebar template for history view -->
+    <!-- Handlebars template for history view -->
     <script type="text/x-handlebars-template" id="gif-history-template">
       <div class="history-container">
         <h3>{{}}</h3>
@@ -37,6 +37,20 @@
         <button id="delete-btn" data-id={{}} class="admin">delete</button>
       </div>
     </script>
+
+    <!-- Handlebars template for error view -->
+    <script type="text/x-handlebars-template" id="error-template">
+      <div class="error-container">
+        <h3>{{}}</h3>
+        <div class="error-info">
+          <p>{{}}</p>
+          <p>{{}}</p>
+        </div>
+        <img src={{}}>
+        <p>{{}}</p>
+      </div>
+    </script>
+
 </head>
 
 <body>
@@ -46,12 +60,15 @@
       <li><a href="/">Home</a></li>
       <li>History</li>
       <li><a href="/about">About the Creators</a></li>
+      <li>Login/Logout</li>
     </ul>
   </nav><br>
 
   <h1>Welcome!</h1>
 
-  <section class="error-View container"></section>
+  <section class="error-View container">
+    <div class="error"></div>
+  </section>
 
   <section class="about-Us container">
   <h2>About the Creators:</h2>
