added log in and log out feature

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
       <li><a href="/">Home</a></li>
       <li>History</li>
       <li><a href="/about">About the Creators</a></li>
+      <li><a href="/login">Login</a></li>
+      <li><a href="/logout">Log Out</a></li>
     </ul>
   </nav>
 
@@ -67,7 +69,7 @@
   <section class="login-View container">
     <form action="" id="login-form">
       <label>Enter a Username:
-          <input type="text" id="userName" placeholder="Username">
+          <input type="text" name="userName" placeholder="Username">
       </label>
       <button type="submit">Submit</button>
     </form>
