--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/layout.css">
-  <link rel="stylesheet" href="styles/modules/.css">
+  <link rel="stylesheet" href="styles/modules.css">
 
   <title>Fun with Gifs!</title>
   <!-- Open Graph Meta Tags -->
