reset tags button working

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       <input type="text" name="seven" value="{{tagArray.[6]}}">
       <input type="text" name="eight" value="{{tagArray.[7]}}"> 
       <button type="submit">Update Tags</button>
-      <button type="submit">Reset to Default</button>
+      <button type="button">Reset to Default</button>
     </form>
   </script>
 </head>
