setup routes for user history, backend and front end. and more.

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
   <h3>Beverly</h3>
   <p>Why she's awesome</p>
   <h3>Patricia</h3>
-  <p>Why I'm awesome</p>
+  <p>I am an aspiring software developer who loves problem-solving and building products that are fun. Before Code Fellows I worked at Bellevue College in the Disability Resource Center. I live in Issaquah with a cat and a dog. I look forward to improving myself through coding.</p>
   <h3>Tyler</h3>
   <p>Why he's awesome</p>
   <h3>Haron</h3>
@@ -84,6 +84,13 @@
   <section class="history-View container">
     <h2>Gifstory</h2>
     <div class="history"></div>
+  </section>
+
+  <section class="not-loggedIn-history-View container">
+    <h2>Gifstory</h2>
+    <div class="no-history">
+      <h4>Login to create and view your history!</h4>
+    </div>
   </section>
 
   <section class="login-View container">
