--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,8 @@
       <input type="text" name="seven" value="{{tagArray.[6]}}">
       <input type="text" name="eight" value="{{tagArray.[7]}}"> 
       <button type="submit">Update Tags</button>
-      <button type="button">Reset to Default</button>
     </form>
+    <button type="button" id="reset-button">Reset to Default</button>
   </script>
 </head>
 
