re-add update link to nav

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
       
       <ul>
         <li><a href="/">Home</a></li>
+        <li><a href="/update">Customize Tags</a></li>
         <li><a href="/history">History</a></li>
         <li><a href="/about">About the Creators</a></li>
         <li><a href="/login">Login</a></li>
