history workinggit add .git add .

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <script type="text/x-handlebars-template" id="gif-history-template">
     <div class="history-container">
       <img src="{{gif}}" class="history-image">
-      <h3>{{questions}} -> {{</h3>
+      <h3>{{questions}} -> </h3>
       <button id="delete-btn" data-id="{{id}}" class="">delete</button>
     </div>
     <hr>
