--- a/public/index.html
+++ b/public/index.html
@@ -18,22 +18,22 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Gif Magic Eight Ball" />
   <meta property="og:type" content="website" />
-  <meta name="description" content="A fun and user-friendly game for all ages!!" />
-  <meta property=”og:description” content="A fun and user-friendly game for all ages!!" />
+  <meta name="description" content="A fun gif-generator that answers your burning questions!!" />
+  <meta property=”og:description” content="A fun gif-generator that answers your burning questions!!" />
   <!-- DO: -->
   <!-- add preview image link eventually in content -->
   <meta property="og:image" content="" />
   <meta property="og:locale" content="en_US" />
   <!-- DO: -->
   <!-- add url link in content. Will be to our Heroku deployment -->
-  <meta property="og:url" content="" />
+  <meta property="og:url" content="https://magic-gif-ball.herokuapp.com" />
 
   <!-- Handlebars template for history view -->
   <script type="text/x-handlebars-template" id="gif-history-template">
     <div class="history-container">
       <img src="{{gif}}" class="history-image">
       <h3>{{questions}} -> </h3>
-      <button id="delete-btn" data-id="{{id}}" class="">delete</button>
+      <button id="delete-btn" data-id="{{questions_id}}" class="">delete</button>
     </div>
     <hr>
   </script>
