--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <div class="history-container">
       <img src="{{gif}}" class="history-image">
       <h3>{{questions}} -> </h3>
-      <button id="delete-btn" data-id="{{questions_id}}" class="">delete</button>
+      <button id="delete-btn" data-id="{{questions_id}}">delete</button>
     </div>
     <hr>
   </script>
