put white hamburger menu into index

--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,8 @@
     <h1>Magic Gif Ball</h1>
     
     <h2>Welcome<span id="loginName"></span>!</h2>
+    <img src="./styles/img_assets/white_Menu-icon.png" width="30" alt="">
     <nav id="menu">
-      
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/update">Customize Tags</a></li>
