--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
         
   <footer>
     <hr>
-    <p>Copyright 2018: Magic Gif Ball</p>
+    <p>&copy; 2018 Magic Gif Ball</p>
   </footer>
       
   <!-- jQuery, Handlebars, and page.js -->
