added 's before Gifstory

--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
     
     <section class="history-View container">
       <!-- change to class, or different id? -->
-      <h2><span class="loginName"></span> Gifstory</h2>
+      <h2><span class="loginName"></span>'s Gifstory</h2>
       <div class="history"></div>
     </section>
     
