--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
     <h1>Magic Gif Ball</h1>
     
 
-    <h2>Welcome<span id="loginName"></span>!</h2>
+    <h2>Welcome<span class="loginName"></span>!</h2>
     <img id="hamburger-icon" src="./styles/img_assets/white_Menu-icon.png" width="30" alt="hamburger menu icon" href="update">
 
     <nav id="menu">
