--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,8 @@
   <!-- Handlebars template for update view -->
   <script type="text/x-handlebars-template" id="update-template">
     <form id="updateTag-form" data-userId={{user_id}}>
-      <h3>Customize Your Tags</h3>
+      <h3>Customize Your Responses!</h3>
+      <p>Examples: "sure", "never", "absolutely", "outlook unclear"</p>
       <input type="text" name="one" value="{{tagArray.[0]}}" required>
       <input type="text" name="two" value="{{tagArray.[1]}}" required>
       <input type="text" name="three" value="{{tagArray.[2]}}" required>
@@ -56,7 +57,7 @@
       <input type="text" name="six" value="{{tagArray.[5]}}" required>
       <input type="text" name="seven" value="{{tagArray.[6]}}" required>
       <input type="text" name="eight" value="{{tagArray.[7]}}" required> 
-      <button type="submit">Update Tags</button>
+      <button type="submit">Update Responses</button>
     </form>
     <button type="button" id="reset-button">Reset to Default</button>
   </script>
