img for meta tags, README update

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,8 @@
   <meta property="og:type" content="website" />
   <meta name="description" content="A fun gif-generator that answers your burning questions!!" />
   <meta property=”og:description” content="A fun gif-generator that answers your burning questions!!" />
-  <!-- DO: -->
   <!-- add preview image link eventually in content -->
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="https://magic-gif-ball.herokuapp.com/styles/img_assets/gif-ball-2.png" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:url" content="https://magic-gif-ball.herokuapp.com" />
 
