--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
         
         <div class="about-Us-profile">
           <h3>Patricia</h3>
-          <p>Why I'm awesome</p>
+          <p>I like snacking and coding and wierd Canadian snack food that my sister brings back from Vancouver. I've really been enjoying software development because it lets me snack and code at the same time.</p>
           <img src="about-pics/haronsPic.jpg">
         </div>
         
