added jquery shake to game js as well as fade in and out

--- a/public/index.html
+++ b/public/index.html
@@ -127,12 +127,15 @@
     </section>
     
     <section class="game-View container">
+      <!-- <div class="holder">
+      </div> -->
       <div id="game-View-form-container">
         <form action="" id="question-form">
+            <img id="gif-ball-image" src="./styles/img_assets/gif-ball-2.png" alt="">
           <input type="text" name="questionToGifBall" placeholder="Enter a Y/N Question">
-          <img src="https://vectr.com/tylerfishbone/b17UlaIL1J.svg?width=355&height=200&select=b17UlaIL1Jpage0" alt="">
+          <img id="retrieved-gif" src="https://vectr.com/tylerfishbone/b17UlaIL1J.svg?width=355&height=200&select=b17UlaIL1Jpage0" alt="">
           <p></p>
-          <button type="submit">Ask!</button>
+          <button id="ask-button" type="submit">Ask!</button>
         </form>
       </div>
       </section>
@@ -164,6 +167,7 @@
       
   <!-- jQuery, Handlebars, and page.js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <!-- link js files -->
