--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
 
         <div class="about-Us-profile">
           <h3>Beverly</h3>
-          <img src="about-pics/Beverly.GIF">
+          <img src="about-pics/beverly.GIF">
           <p>Beverly is a Code Fellows student in Seattle learning to become a web developer. When she's not coding or walking her dog, you can find her wasting countless hours looking at random GIFs.</p>
           <a href="https://www.linkedin.com/in/beverly-pham/" target="_blank"><img class="link-icon" src="/styles/img_assets/linkedin.svg"></a>
           <a href="https://github.com/zarkle" target="_blank"><img class="link-icon" src="/styles/img_assets/github.svg"></a>
