update open graph

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
   <title>Magic Gif Ball</title>
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Gif Magic Eight Ball" />
+  <meta property="og:title" content="Magic Gif Ball" />
   <meta property="og:type" content="website" />
   <meta name="description" content="A fun gif-generator that answers your burning questions!!" />
   <meta property=”og:description” content="A fun gif-generator that answers your burning questions!!" />
