added note to log in

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@
     <a href="/"><h1>Magic Gif Ball</h1></a>    
       <h2>Welcome<span class="loginName"></span>!</h2>
       <img id="hamburger-icon" src="./styles/img_assets/white_Menu-icon.png" width="30" alt="hamburger menu icon" href="update">
+      <p class="loggedOut">Note: Log in for more features</p>
 
       <nav id="menu">
         <ul>
