add tag to history view

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       <div class="history-absolute-container">
         <img src="{{gif}}" class="history-image">
         <h3>{{questions}}</h3>
+        <p>{{tag}}</p>
         <button class="delete-btn" data-id="{{questions_id}}">delete</button>
       </div>
     </div>
